# microchain-demo

./: .dockerignore  CMakeLists.txt  README.md  docker_build.sh  package.json  tsconfig.json
contracts/: CMakeLists.txt
contracts/starter/: CMakeLists.txt  starter.abi
contracts/starter/include/: events.hpp  starter.hpp
contracts/starter/src/: events.cpp  starter-micro-chain.cpp  starter.cpp
contracts/starter/tests/include/: tester-base.hpp
libraries/eosiolib/tests/: CMakeLists.txt
wasm/: CMakeLists.txt
